Fix bug not showing all parliament members. Improve CSS

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,7 @@ body {
     background-color: rgb(235,233,232);
 }
 
+
 header {
     height: 70px;
     width: 100vw;
@@ -17,25 +18,47 @@ header {
 .main-content {
     display: flex;
     flex-direction: column;
-    width: 60vw;
+    width: 900px;
     height: 100vw;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 13px;
-    margin-bottom: 13px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .member-list {
     width: 100%;
 }
 
-
 /* Make card grid switch to single column when screen width is less than 700px */
-@media (max-width: 700px) {
-    .card-list {
+@media (max-width: 900px) {
+    .main-content {
+        width: 100%;
+    }
+}
+@media (max-width: 550px) {
+    .main-content {
+        margin: 0;
+        width: 100vw;
+        min-width: initial; /* Remove the minimum width in mobile view */
+    }
+    .seating-plan {
+        display: none;
+    }
+    .cards {
         grid-template-columns: 1fr; /* One card per row */
     }
-    .main-content {
-        width: 90vw;
+    .card-list {
+        margin: 0;
+    }
+    .filter-container {
+        flex-direction: column; 
+        align-items: stretch; 
+    } 
+    .search-bar, .sort-dropdown, .party-dropdown { 
+        max-width: none; 
+        position: relative;
+        display: inline-block;
+        flex-grow: 1;
     }
 }
