--- a/frontend/src/Card/Card.css
+++ b/frontend/src/Card/Card.css
@@ -11,6 +11,8 @@
 }
 
 .card-image {
+    width: 70px;
+    height: 70px;
     margin-right: 15px;
     border-radius: 50%;
 }
